# jigsaw

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: sessions.py
backend/app/models/: schemas.py
backend/app/services/: storage.py  vision.py
data/: README.md
data/manifests/: smoke-manifest.json
docs/: TASKS.md  calibration-guidance.md  capture-protocol.md  dataset-manifest.md  vision-baseline.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: httpClient.ts  mockClient.ts
frontend/src/components/: ImageTapTarget.tsx  StatusPill.tsx
scripts/: README.md  evaluate_baseline.py  generate_smoke_fixture.py  validate_manifest.py
